fixes alignment, still needs vertical align

--- a/css/main.css
+++ b/css/main.css
@@ -21,11 +21,6 @@ background:none repeat scroll 0 0 rgba(0, 0, 0, 0.30);
   margin: 0 auto;
 }
 
-.middle {
-  vertical-align: middle;
-  float:none;
-  display: inline-block;
-}
 
 .img-header {
   margin-top: 100px;
